--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,8 @@ html
     link(rel="stylesheet", href="http://twitter.github.io/bootstrap/assets/css/bootstrap.css")
     link(rel="stylesheet", href="http://twitter.github.io/bootstrap/assets/css/bootstrap-responsive.css")
     script(src="http://twitter.github.io/bootstrap/assets/js/bootstrap.js")
+    link(rel="stylesheet", href="http://jscrollpane.kelvinluck.com/style/jquery.jscrollpane.css")
+    script(src="http://jscrollpane.kelvinluck.com/script/jquery.jscrollpane.min.js")
     script(text="text/javascript", src="http://cdn.sockjs.org/sockjs-0.3.min.js")
     block head
   body
