--- a/views/paymentmethod.jade
+++ b/views/paymentmethod.jade
@@ -21,42 +21,45 @@ block body
     h1(align="center") Your Payment Method for  #{network}
     include navigator
     if (success === true)
-      .container
-        .span6.offset3
-          form.well.form-horizontal(method='POST', id='login', align='center', onsubmit='return validateForm();')
-            fieldset.control-group(id='field-control')
-              .control-group
-                label.control-label(for='inputCardType') Card Type:
-                .controls
-                  label(type='text', id='inputCardType') #{cardType}
-              .control-group
-                label.control-label(for='inputName') Name:
-                .controls
-                  label(type='text', id='inputName') #{cardName}
-              .control-group
-                label.control-label(for='inputNumber') Number:
-                .controls
-                  label(type='text', id='inputNumber') xxxx xxxx xxxx #{cardNumber}
-              .control-group
-                label.control-label(for='inputBillingAddress') Billing Address:
-                .controls
-                  label(type='text', id='inputBillingAddress') #{cardBillingAddress}
-              .control-group
-                label.control-label(for='inputCountry') Country:
-                .controls
-                  label(type='text', id='inputCountry') #{cardCountry}
-              .control-group
-                label.control-label(for='inputState') State:
-                .controls
-                  label(type='text', id='inputState') #{cardState}
-              .control-group
-                label.control-label(for='inputZipCode') Zip:
-                .controls
-                  label(type='text', id='inputZipCode') #{cardZipCode}
-              .control-group.pull-left
-                .controls
-                  input.btn.btn-primary(href='#',id='deletePaymentMethod',rel='popover', data-toggle='popover', data-placement='bottom',title='Delete payment method', value='Remove')
-                  input.btn.btn-primary(href='/account/paymentMethod/update', value='Update')
+      .container-fluid
+        .row-fluid
+          include account
+        .row-fluid
+          .span6.offset3
+            form.well.form-horizontal(method='POST', id='login', align='center', onsubmit='return validateForm();')
+              fieldset.control-group(id='field-control')
+                .control-group
+                  label.control-label(for='inputCardType') Card Type:
+                  .controls
+                    label(type='text', id='inputCardType') #{cardType}
+                .control-group
+                  label.control-label(for='inputName') Name:
+                  .controls
+                    label(type='text', id='inputName') #{cardName}
+                .control-group
+                  label.control-label(for='inputNumber') Number:
+                  .controls
+                    label(type='text', id='inputNumber') xxxx xxxx xxxx #{cardNumber}
+                .control-group
+                  label.control-label(for='inputBillingAddress') Billing Address:
+                  .controls
+                    label(type='text', id='inputBillingAddress') #{cardBillingAddress}
+                .control-group
+                  label.control-label(for='inputCountry') Country:
+                  .controls
+                    label(type='text', id='inputCountry') #{cardCountry}
+                .control-group
+                  label.control-label(for='inputState') State:
+                  .controls
+                    label(type='text', id='inputState') #{cardState}
+                .control-group
+                  label.control-label(for='inputZipCode') Zip:
+                  .controls
+                    label(type='text', id='inputZipCode') #{cardZipCode}
+                .control-group.pull-left
+                  .controls
+                    input.btn.btn-primary(href='#',id='deletePaymentMethod',rel='popover', data-toggle='popover', data-placement='bottom',title='Delete payment method', value='Remove')
+                    input.btn.btn-primary(href='/account/paymentMethod/update', value='Update')
     else
       .alert.alert-error
         | #{message}
