--- a/views/paymentmethodcreate.jade
+++ b/views/paymentmethodcreate.jade
@@ -29,56 +29,59 @@ block body
         }
       }
     include navigator
-    .container
-    .span5.offset4
-      form.well.form-horizontal(method='POST', id='login', onsubmit='return validateForm();')
-        fieldset.control-group(id='field-control')
-          span.help-block(id='help-field')
-          .control-group
-            label.control-label(for="inputVisa")
-              | Card Type:
-            .controls
-              label.radio
-                input(type='radio', name='card', id="inputVisa")
-                | Visa
-            .controls
-              label.radio
-                input(type='radio', name='card', id="inputMastercard")
-                | Master Card
-            .controls
-              label.radio
-                input(type='radio', name='card', id="inputAmericanExpress")
-                | American Express
-            .controls
-              label.radio
-                input(type='radio', name='card', id="inputDinnersClub")
-                | Diners Club
-          .control-group
-            label.control-label(for="inputName")
-              | Name on card:
-            .controls
-              input(type='text', id='inputName', name='inputName', placeholder='Please type your full name')
-          .control-group
-            label.control-label(for="inputNumber")
-              | Number:
-            .controls
-              .input
-                input.input(type='text', id='inputNumber', name='inputNumber', placeholder='Please type your credit card number')
-          .control-group
-            label.control-label(for="inputCvc")
-              | Cvc
-            .controls
-              input(type='text', id='inputCvc', name='inputCvc', placeholder='Please type your cvc')
-          .control-group
-            label.control-label(for="inputExpires")
-              | Expires
-            .controls
-              input.input-mini.span1(type='text', id='inputMonthExpires', name='inputMonthExpires', placeholder='Please enter the expire date of your card')
-              input.input-mini.span1(type='text', id='inputYearExpires', name='inputYearExpires', placeholder='Please enter the expire date of your card')
-          .control-group
-            .controls
-              .action
-                input.btn.btn-primary(type='submit', value='Add Your Credit Card')
+    .container-fluid
+      .row-fluid
+        include account
+      .row-fluid
+        .span5.offset4
+          form.well.form-horizontal(method='POST', id='login', onsubmit='return validateForm();')
+            fieldset.control-group(id='field-control')
+              span.help-block(id='help-field')
+              .control-group
+                label.control-label(for="inputVisa")
+                  | Card Type:
+                .controls
+                  label.radio
+                    input(type='radio', name='card', id="inputVisa")
+                    | Visa
+                .controls
+                  label.radio
+                    input(type='radio', name='card', id="inputMastercard")
+                    | Master Card
+                .controls
+                  label.radio
+                    input(type='radio', name='card', id="inputAmericanExpress")
+                    | American Express
+                .controls
+                  label.radio
+                    input(type='radio', name='card', id="inputDinnersClub")
+                    | Diners Club
+              .control-group
+                label.control-label(for="inputName")
+                  | Name on card:
+                .controls
+                  input(type='text', id='inputName', name='inputName', placeholder='Please type your full name')
+              .control-group
+                label.control-label(for="inputNumber")
+                  | Number:
+                .controls
+                  .input
+                    input.input(type='text', id='inputNumber', name='inputNumber', placeholder='Please type your credit card number')
+              .control-group
+                label.control-label(for="inputCvc")
+                  | Cvc
+                .controls
+                  input(type='text', id='inputCvc', name='inputCvc', placeholder='Please type your cvc')
+              .control-group
+                label.control-label(for="inputExpires")
+                  | Expires
+                .controls
+                  input.input-mini(type='text', id='inputMonthExpires', name='inputMonthExpires', placeholder='Please enter the expire date of your card')
+                  input.input-mini(type='text', id='inputYearExpires', name='inputYearExpires', placeholder='Please enter the expire date of your card')
+              .control-group
+                .controls
+                  .action
+                    input.btn.btn-primary(type='submit', value='Add Your Credit Card')
 
 
 
