Move the js and css content to separate directories
REVIEW: 110630

--- a/views/register.jade
+++ b/views/register.jade
@@ -1,7 +1,7 @@
 extends layout
 block head
   title Create your own #{network} Account
-  script(src='https://raw.github.com/chriso/node-validator/master/validator-min.js');
+  script(src='/js/validator/validator-min.js');
 block body
   .title
     h1(align="center") Create your own #{network} Account
