Add a search field into the asset expandable menu REVIEW: 110715

--- a/views/index.jade
+++ b/views/index.jade
@@ -25,6 +25,8 @@ block body
                         | #{category.name}
                   .accordion-body.collapse(id='subCategory#{category.id}')
                     .accordion-inner
+                      form.nav-search
+                        input.search-query(type='text', placeholder='Search')
                       for subCategory in category.subcategories
                           li
                             a(href='#', id='#{subCategory.id}', assetcount='#{subCategory.pages}')
