--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     script(src="http://code.jquery.com/jquery.js")
     link(rel="stylesheet", href="http://twitter.github.io/bootstrap/assets/css/bootstrap.css")
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(rel="stylesheet", href="http://twitter.github.io/bootstrap/assets/css/bootstrap-responsive.css")
     script(src="http://twitter.github.io/bootstrap/assets/js/bootstrap.js")
     link(rel="stylesheet", href="http://jscrollpane.kelvinluck.com/style/jquery.jscrollpane.css")
