--- a/views/pointsbuy.jade
+++ b/views/pointsbuy.jade
@@ -37,7 +37,7 @@ block body
                   .controls
                     input.pull-left.input-small(type='text', name='reedemCode', id='reedemCode')
               .control-group
-                input.btn-primary(type='submit', id='reedemButton', value='Reedem')
+                input.btn.btn-primary(type='submit', id='reedemButton', value='Reedem')
               .control-group
                 .input
                   label.control-label Purchase Points
@@ -62,4 +62,4 @@ block body
                         input.input-small(type='text', name='points')
               .control-group
                 .action
-                  input.btn-primary(type='submit',id='buyPointsButton', value='Purchase')
+                  input.btn.btn-primary(type='submit',id='buyPointsButton', value='Purchase')
