--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,8 @@
 extends layout
 block head
   title Welcome to the #{network} Web Store
+  link(rel="stylesheet", href="/css/index.css")
+  script(src="/js/index.js")
 
 block body
   .title
