External scripts should only being called with https otherwise they will not work if they are served up as https

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,14 +1,14 @@
 doctype 5
 html
   head
-    script(src="http://code.jquery.com/jquery.js")
+    script(src="https://code.jquery.com/jquery.js")
     link(rel="stylesheet", href="/css/bootstrap.min.css")
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(rel="stylesheet", href="/css/bootstrap-responsive.min.css")
     script(src="/js/bootstrap.min.js")
-    link(rel="stylesheet", href="http://jscrollpane.kelvinluck.com/style/jquery.jscrollpane.css")
-    script(src="http://jscrollpane.kelvinluck.com/script/jquery.jscrollpane.min.js")
-    script(text="text/javascript", src="http://cdn.sockjs.org/sockjs-0.3.min.js")
+    link(rel="stylesheet", href="/css/jquery.jscrollpane.css")
+    script(src="/js/jquery.jscrollpane.min.js")
+    script(text="text/javascript", src="https://cdn.sockjs.org/sockjs-0.3.min.js")
     block head
   body
     block body
