Make the acountmodify work again

--- a/views/account.jade
+++ b/views/account.jade
@@ -1,6 +1,6 @@
 extends layout
 block body
-    script
+    script.
       $(document).ready(function() {
         //we are going to compare our url path
         //with the id of each li element. when the
