--- a/views/accountmodify.jade
+++ b/views/accountmodify.jade
@@ -4,7 +4,7 @@ block head
 block body
   .title
     h1(align="center") Modify your #{network} Account
-    script
+    script.
       function validateForm() {
 
         if ($('#password').val() !== $('#password2').val()) {
