--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,9 +2,9 @@ doctype 5
 html
   head
     script(src="http://code.jquery.com/jquery.js")
-    link(rel="stylesheet", href="css/bootstrap-combined.min.css")
+    link(rel="stylesheet", href="/css/bootstrap-combined.min.css")
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    script(src="js/bootstrap.min.js")
+    script(src="/js/bootstrap.min.js")
     link(rel="stylesheet", href="http://jscrollpane.kelvinluck.com/style/jquery.jscrollpane.css")
     script(src="http://jscrollpane.kelvinluck.com/script/jquery.jscrollpane.min.js")
     script(text="text/javascript", src="http://cdn.sockjs.org/sockjs-0.3.min.js")
