--- a/public/assets/templates/index.html
+++ b/public/assets/templates/index.html
@@ -18,8 +18,8 @@
   <---- Replace me ---->
 
   <script src="/js/jquery-1.9.1.js"></script>
-  <script src="/js/handlebars-1.0.0-rc.4.js"></script>
-  <script src="/js/ember-1.0.0-rc.6.1.js"></script>
+  <script src="/js/handlebars-1.0.0.js"></script>
+  <script src="/js/ember-1.1.2.js"></script>
   <script src="/js/bootstrap.min.js"></script>
   <script src="/assets/_app.js"></script>
 
