Show the channels and the subChannels on the UI.
We are currently support only one nested level of subChannel.
Here is an example of the use case that we currently support:

|-- channel 1
    |-- subChannel 1
    |-- subChannel 2
|-- channel 2
    |-- subChannel 3
    |-- subChannel 4

--- a/public/assets/templates/index.hbs
+++ b/public/assets/templates/index.hbs
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/bootstrap-combined.min.css">
+  <link rel="stylesheet" href="/css/mainpage.css">
 </head>
 <body>
 
