--- a/public/assets/templates/participantinfo.hbs
+++ b/public/assets/templates/participantinfo.hbs
@@ -102,7 +102,7 @@
 
   <!-- Password input-->
   <div class="control-group">
-    <label class="control-label" for="passwordConfirm">Password Input</label>
+    <label class="control-label" for="passwordConfirm">Confirm Password</label>
     <div class="controls">
       {{input id="passwordConfirm" name="passwordConfirm" type="password" placeholder="Retype your password" value=confirmAccountPassword class="input-xlarge" required=""}}
       {{#if passwordsAreDifferent}}
